objects/OrderLineItemToSCLineItemMappings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Annualized_Maintenance_Due__c</fullName>
        <label>Annualized_Maintenance_Due</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Quantity__c</fullName>
        <label>Current_Quantity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Support_Date__c</fullName>
        <label>End_Support_Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Name__c</fullName>
        <label>End_User_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_End_of_Support__c</fullName>
        <label>Extended_End_of_Support</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_Applied__c</fullName>
        <label>Fees_Applied</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genesys_Care_Rate__c</fullName>
        <label>Genesys_Care_Rate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Increase__c</fullName>
        <label>Increase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_End_Date__c</fullName>
        <label>Maintenance_End_Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Start_Date__c</fullName>
        <label>Maintenance_Start_Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item__c</fullName>
        <label>Order_Line_Item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Net_License_value__c</fullName>
        <label>Original_Net_License_value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Quantity__c</fullName>
        <label>Original_Quantity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Line_Maintenance_Value__c</fullName>
        <label>Previous_Line_Maintenance_Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Product__c</fullName>
        <label>Quote_Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_net_license_value__c</fullName>
        <label>Revised_net_license_value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Name__c</fullName>
        <label>Sold_To_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>UnitPrice</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgraded_Product__c</fullName>
        <label>Upgraded_Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>OrderLineItemToSCLineItemMappings</label>
</CustomObject>